<resources>
    <string name="app_name">DriveMe SL</string>
    <string name="login_txt">Login</string>
    <string name="password_txt">Password</string>
    <string name="login_btn_txt">Sign in</string>
    <string name="don_t_have_account_register">Don’t have an account?  Sign up here</string>
    <string name="reg_full_name">Full Name</string>
    <string name="reg_phone_number">Phone Number</string>
    <string name="reg_nic">NIC</string>
    <string name="reg_host_name">Host Name</string>
    <string name="reg_br_number">BR Number</string>
    <string name="reg_nearest_town">Nearest Town</string>
    <string name="reg_address">Address</string>
    <string name="reg_email">Email</string>
    <string name="host_registration_btn">Host Registration</string>
    <string name="select_image_from">Select Image From,</string>
    <string name="please_select_your_type_for_proceed">Please select your type for proceed,</string>
    <string name="active_town">Active Town</string>
    <string name="driving_licence_pic">Driving Licence Photo</string>
    <string name="submit">Submit</string>
    <string name="driver_register">Driver Registration</string>
    <string name="host_registration">Host Registration</string>
    <string name="car">Car</string>
    <string name="van">Van</string>
    <string name="bus">Bus</string>
    <string name="tuk">Tuk-Tuk</string>
    <string name="select_language">Select Language</string>
    <string name="select_language_sin">භාෂාව තෝරන්න</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="or">- OR -</string>
    <string name="driver_registration">Driver Registration</string>
    <string name="vehicle_registration">Vehicle Registration</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="upload_vehicle_images">Upload Vehicle Images</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="airport">Airport</string>
    <string name="trip">Trip</string>
    <string name="pass_not_match_msg">Passwords are not matching!</string>
    <string name="fill_empty_msg">Please fill the mandatory data!</string>
    <string name="verify">Verify</string>
    <string name="otp_incorrect_mdg">OTP is incorrect, Please try again.</string>
    <string name="post_a_new_trip">Post A New Job</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Just tap to contact us,</string>
    <string name="tap_on_this_button_drme_team_will_contact_you_within_while">*Tap on this button, DRME team will contact you within while.</string>
    <string name="make_an_inquiry">Make an inquiry</string>
    <string name="send">Send</string>
    <string name="type_something">Type something...</string>
    <string name="profile">Profile</string>
    <string name="language_settings">Language Settings</string>
    <string name="update">Update</string>
    <string name="complete">Complete</string>
    <string name="accepted">Accepted</string>
    <string name="new_posts">New Posts</string>
    <string name="otp_wrong">OTP is not valid</string>
    <string name="no_data_to_show">No data to show</string>
    <string name="create_post">Create Post</string>
    <string name="type_of_journey">Type of journey</string>
    <string name="airport_pick">• Airport Pick</string>
    <string name="airport_drop">• Drop Airport</string>
    <string name="tour">• Tour</string>
    <string name="destination">Destination</string>
    <string name="no_of_nights">No. of nights</string>
    <string name="stay_locations">Stay Locations</string>
    <string name="night_1">Night 1 Destination</string>
    <string name="night_2">Night 2 Destination</string>
    <string name="night_3">Night 3 Destination</string>
    <string name="night_4">Night 4 Destination</string>
    <string name="night_5">Night 5 Destination</string>
    <string name="night_6">Night 6 Destination</string>
    <string name="night_7">Night 7 Destination</string>
    <string name="night_8">Night 8 Destination</string>
    <string name="night_9">Night 9 Destination</string>
    <string name="night_10">Night 10 Destination</string>
    <string name="number_of_passengers">Number of passengers</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="address_pick">• Drop Address</string>
    <string name="night_stay_type">Night Stay Type</string>
    <string name="same_destination">Same Destination</string>
    <string name="different_destination">Different Destination</string>
    <string name="pic_must_msg">Please take a profile picture</string>
    <string name="settings">Settings</string>
    <string name="langu_warning">This change may effect to application language!</string>
    <string name="proceed">Proceed</string>
    <string name="cancel">Cancel</string>
    <string name="any">Any</string>
    <string name="drive_type">Drive Type</string>
    <string name="lic_warn">Capture your licence image...</string>
    <string name="plz_vehicle_img">Please upload your vehicle images...</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="vehicle_images">Vehicle Images</string>
    <string name="status">Status</string>
    <string name="triptype">TripType</string>
    <string name="passengers">Passengers :</string>
    <string name="nights">Nights :</string>
    <string name="date_post">Date :</string>
    <string name="time_post">Time :</string>
    <string name="applied_bids">Applied Bids :</string>
    <string name="vehicle_type_post">Vehicle Type :</string>
    <string name="more_night_information">More Night Information...</string>
    <string name="more_bids_information">More Bids Information...</string>
    <string name="bid">Bid :</string>
    <string name="rupee">Rs. </string>
    <string name="bids">Bids</string>
    <string name="driver_name">Driver Name : </string>
    <string name="client_name">Client Name : </string>
    <string name="accept">Accept</string>
    <string name="start_location">Start Location :</string>
    <string name="end_location">End Location :</string>
    <string name="call_driver">Call Driver</string>
    <string name="chaeges_msg">This action will complete with your service provider,  then this call will charge standard charges.</string>
    <string name="call_client">Call Client</string>
    <string name="code_is_sent_to">Code is sent to </string>
    <string name="front_view">Front View</string>
    <string name="back_view">Back View</string>
    <string name="side_view">Side View</string>
    <string name="indoor_view">Indoor View</string>
    <string name="complete_the_job">Complete The Job</string>
    <string name="cant_complete_job_this_time">You can\'t complete this job at this moment</string>
</resources>