<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:background="@color/background">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/gray" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height=".5dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="20dp"
        android:background="@color/gray"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textColor="@color/gray"
        android:textStyle="bold"
        android:textSize="30sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:backgroundTint="@color/gray"
        android:src="@drawable/ic_baseline_account_circle_24"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="User Name"
        android:textColor="@color/gray"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/circleImageView2"
        app:layout_constraintStart_toStartOf="@+id/circleImageView2"
        app:layout_constraintTop_toBottomOf="@+id/circleImageView2" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_nic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/et_back"
                android:hint="@string/reg_nic"
                android:inputType="text"
                android:maxLines="1"
                android:paddingHorizontal="8dp"
                android:paddingVertical="16dp" />


            <EditText
                android:id="@+id/et_host_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/et_back"
                android:hint="@string/reg_host_name"
                android:inputType="text"
                android:maxLines="1"
                android:paddingHorizontal="8dp"
                android:paddingVertical="16dp" />


            <EditText
                android:id="@+id/et_mobile_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/et_back"
                android:hint="@string/reg_phone_number"
                android:inputType="phone"
                android:maxLines="1"
                android:paddingHorizontal="8dp"
                android:paddingVertical="16dp" />


            <EditText
                android:id="@+id/et_br"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/et_back"
                android:hint="@string/reg_br_number"
                android:inputType="text"
                android:maxLines="1"
                android:paddingHorizontal="8dp"
                android:paddingVertical="16dp" />


            <EditText
                android:id="@+id/et_nearest_town"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/et_back"
                android:hint="@string/reg_nearest_town"
                android:inputType="text"
                android:maxLines="1"
                android:paddingHorizontal="8dp"
                android:paddingVertical="16dp" />


            <EditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/et_back"
                android:gravity="top"
                android:hint="@string/reg_address"
                android:inputType="textMultiLine"
                android:lines="4"
                android:maxLines="4"
                android:paddingHorizontal="8dp"
                android:paddingVertical="16dp"
                android:textAlignment="gravity" />


            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/et_back"
                android:hint="@string/reg_email"
                android:inputType="text"
                android:maxLines="1"
                android:paddingHorizontal="8dp"
                android:paddingVertical="16dp" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>